--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,7 +27,7 @@ jobs:
       uses: docker/build-push-action@v2.7.0
       with:
         context: .
-        build-args:
-          - revision=$REVISION
+        build-args: |
+          revision=$REVISION
         push: true
         tags: teyras/ttrss:r${{ env.REVISION }}
