--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,6 +21,13 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
+    - name: Cache Docker layers
+      uses: actions/cache@v2
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-ttrss-buildx-${{ env.REVISION }}
+        restore-keys: |
+          ${{ runner.os }}-ttrss-buildx
     - name: Figure out the revision from git tag
       run: echo "REVISION=${GITHUB_REF#refs/*/r}" >> $GITHUB_ENV
     - name: Build and push Docker image
@@ -31,3 +38,9 @@ jobs:
           revision=${{ env.REVISION }}
         push: true
         tags: teyras/ttrss:r${{ env.REVISION }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,mode=max,dest=/tmp/.buildx-cache-new
+    - name: Move cache
+      run: |
+        rm -rf /tmp/.buildx-cache
+        mv /tmp/.buildx-cache-new /tmp/.buildx-cache
