--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,7 +29,7 @@ jobs:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-ttrss-buildx-${{ env.REVISION }}
         restore-keys: |
-          ${{ runner.os }}-ttrss-buildx
+          ${{ runner.os }}-ttrss-buildx-
     - name: Build and push Docker image
       uses: docker/build-push-action@v2.7.0
       with:
